--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -107,6 +107,9 @@
     <!-- Tag View -->
     <script src="/app/components/home/tag/TagHeaderController.js"></script>
 
+    <!-- Group View -->
+    <script src="/app/components/home/group/GroupHeaderController.js"></script>
+
     <!-- Profile View -->
     <script src="/app/components/home/profile/ProfileHeaderController.js"></script>
 
