redesigned login page, updated TranslateConfig
Still need to test login page functions in angularjs context

--- a/src/main/webapp/app/shared/topmenu/TopMenuView.html
+++ b/src/main/webapp/app/shared/topmenu/TopMenuView.html
@@ -42,7 +42,7 @@
                         <li>
                             <a ui-sref="about.presentation">
                                 <span class="glyphicon glyphicon-eye-open"></span>
-                                <span translate="tatami.presentation.title"></span>
+                                <span translate="tatami.home.menu.about.presentation"></span>
                             </a>
                         </li>
                         <li>
@@ -69,7 +69,7 @@
                         <li>
                             <a ui-sref="about.license">
                                 <span class="glyphicon glyphicon-info-sign"></span>
-                                <span translate="tatami.license.title"></span>
+                                <span translate="tatami.home.menu.about.license"></span>
                             </a>
                         </li>
                         <li>
