changed account preferences glyphicons

--- a/src/main/webapp/app/shared/topmenu/TopMenuView.html
+++ b/src/main/webapp/app/shared/topmenu/TopMenuView.html
@@ -137,7 +137,7 @@
                             </li>
                             <li>
                                 <a ui-sref="account.preferences">
-                                    <span class="glyphicon glyphicon-picture"></span>
+                                    <span class="glyphicon glyphicon-cog"></span>
                                     <span translate="tatami.account.preferences.title"></span>
                                 </a>
                             </li>
