--- a/src/main/webapp/app/shared/sidebars/home/HomeSidebarView.html
+++ b/src/main/webapp/app/shared/sidebars/home/HomeSidebarView.html
@@ -35,7 +35,7 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <span class="glyphicon glyphicon-fire"></span>
-                <span translate="tatami.home.sidebar.trending"></span>
+                <span translate="tatami.home.sidebar.trends"></span>
             </div>
             <div class="panel-body items">
                 <div ng-repeat="tag in tags">
