--- a/src/main/webapp/app/shared/sidebars/profile/ProfileSidebarView.html
+++ b/src/main/webapp/app/shared/sidebars/profile/ProfileSidebarView.html
@@ -50,7 +50,7 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <span class="glyphicon glyphicon-fire"></span>
-                <span translate="tatami.home.profile.sidebar.trending"></span>
+                <span translate="tatami.home.profile.sidebar.trends"></span>
             </div>
             <div class="panel-body items">
                 <div ng-repeat="tag in tags">
