changed admin property to groupAdmin for clarity

--- a/src/main/webapp/app/shared/lists/user/UserListView.html
+++ b/src/main/webapp/app/shared/lists/user/UserListView.html
@@ -27,7 +27,7 @@
                     {{ user.jobTitle }}
                 </div>
 
-                <div ng-if="user.role == 'ADMIN'" class="text-muted" translate="tatami.home.status.admin"></div>
+                <div ng-if="user.role == 'ADMIN'" class="text-muted" translate="tatami.home.status.groupAdmin"></div>
             </h4>
         </div>
     </section>
