--- a/src/main/webapp/app/shared/sidebars/home/HomeSidebarView.html
+++ b/src/main/webapp/app/shared/sidebars/home/HomeSidebarView.html
@@ -27,10 +27,10 @@
             <div class="panel-body items">
                 <div class="little-padding-bottom" ng-repeat="group in groups">
                     <a ui-sref="home.home.group.statuses({ groupId: group.groupId })">{{ group.name }}</a>
-                    <span ng-if="group.publicGroup" class="label label-warning" translate="tatami.home.sidebar.public"></span>
-                    <span ng-if="!group.publicGroup" class="label label-info" translate="tatami.home.sidebar.private"></span>
-                    <span ng-if="group.archivedGroup" class="label label-default" translate="tatami.home.sidebar.archived"></span>
-                    <span ng-if="group.administrator" class="badge progress-bar-danger" translate="tatami.home.sidebar.administrator"></span>
+                    <span ng-if="group.publicGroup" class="label label-warning"><small translate="tatami.home.sidebar.public"></small></span>
+                    <span ng-if="!group.publicGroup" class="label label-info"><small translate="tatami.home.sidebar.private"></small></span>
+                    <span ng-if="group.archivedGroup" class="label label-default"><small translate="tatami.home.sidebar.archived"></small></span>
+                    <span ng-if="group.administrator" class="label label-danger"><small translate="tatami.home.sidebar.administrator"></small></span>
                 </div>
             </div>
         </div>
